[gd_scene load_steps=2 format=3 uid="uid://ducly34inp8fw"]

[ext_resource type="Script" path="res://scripts/ui/DebugOverlay.gd" id="1_debug"]

[node name="DebugOverlay" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource("1_debug")

[node name="DebugPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
offset_left = 5.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 0

[node name="DebugText" type="RichTextLabel" parent="DebugPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
bbcode_enabled = true
text = "Debug info will appear here..."
scroll_following = true